# rex-the-robot

./: README.md  report.md
ROS/devel/: .catkin  .rosinstall  setup.sh
ROS/devel/include/niryo_moveit/: MoverService.h  MoverServiceRequest.h  MoverServiceResponse.h  NiryoMoveitJoints.h  NiryoTrajectory.h
ROS/devel/include/roborex/: ArmPose.h  BasePose.h  CmdVel.h  Command.h  ForwardKinematics.h  ForwardKinematicsRequest.h  ForwardKinematicsResponse.h  InverseKinematics.h  InverseKinematicsRequest.h  InverseKinematicsResponse.h  JointState.h  Start.h  StartRequest.h  StartResponse.h  StartSystem.h  StartSystemRequest.h  StartSystemResponse.h  Trajectories.h  Trajectory.h  TrajectoryPlanner.h  TrajectoryPlannerRequest.h  TrajectoryPlannerResponse.h  TrajectoryStatus.h
ROS/devel/lib/niryo_moveit/: trajectory_subscriber.py
ROS/devel/lib/pkgconfig/: iai_adapter_iso50_kinect2_description.pc  iai_adapters_description.pc  iai_boxy_base.pc  iai_boxy_base_2.pc  iai_boxy_description.pc  iai_boxy_torso.pc  iai_donbot_description.pc  iai_kinect2_description.pc  iai_kinect2_look_target.pc  iai_kinect_description.pc  iai_kms_40_description.pc  iai_kuka_lwr4_description.pc  iai_pepper_demo_ros_bridge.pc  iai_roller_description.pc  iai_schunk_pw070_v6.pc  iai_table_robot_description.pc  iai_ur3.pc  iai_ur_description.pc  iai_weiss_wsg50.pc  iai_wsg_50_description.pc  moveit_msgs.pc  niryo_moveit.pc  niryo_one_urdf.pc  roborex.pc  robot2wheel.pc  robotiq_2f_140_gripper_visualization.pc  ros_tcp_endpoint.pc  ur3_with_gripper.pc  ur_description.pc
ROS/devel/lib/roborex/: roborex_base_pose_subscriber  roborex_base_pose_subscriber_node  roborex_explore_behavior  roborex_grasp_behavior  roborex_gtg_behavior  roborex_system_behavior  roborex_target_pose_subscriber
ROS/src/roborex/: CMakeLists.txt  package.xml
ROS/src/roborex/config/: params.yaml
ROS/src/roborex/launch/: explore_behavior.launch  grasp_behavior.launch  gtg_behavior.launch  roborex.launch  system_behavior.launch  trajectory_planner.launch
ROS/src/roborex/msg/: ArmPose.msg  BasePose.msg  JointState.msg  Trajectories.msg  Trajectory.msg  TrajectoryStatus.msg
ROS/src/roborex/src/nodes/: basePoseSubscriberNode.cpp  exploreBehaviorNode.cpp  forward_kinematics_service_node.py  goToGoalBehaviorNode.cpp  graspTargetBehaviorNode.cpp  inverse_kinematics_service_node.py  systemBehaviorNode.cpp  targetPoseSubscriberNode.cpp  tcp_endpoint.py  trajectory_planner_service_node.py
ROS/src/roborex/srv/: ForwardKinematics.srv  InverseKinematics.srv  StartSystem.srv  TrajectoryPlanner.srv
ROS/src/robot2wheel/: CMakeLists.txt  robot2wheel.urdf
ROS/src/robot2wheel/launch/: display.launch  spawn.launch
RexRobotRetriever/Assets/: RangeSensorPublisher.cs  RobotArmJoints.cs  msgbrowser_settings.asset
RexRobotRetriever/Assets/ML-Agents/Timers/: RL_timers.json  SampleScene_timers.json
RexRobotRetriever/Assets/Materials/: Arm.mat  ArmBlue.mat  Chassis.mat  Cube.mat  Floor.mat  Grippy.physicMaterial  Pi.mat  Target.physicMaterial  Wall.mat  Wheel.mat
RexRobotRetriever/Assets/Prefabs/: Arena.prefab  MobileRobotBase.prefab
RexRobotRetriever/Assets/Resources/: ROSConnectionPrefab.prefab
RexRobotRetriever/Assets/Robotic Arm/: Document.txt
RexRobotRetriever/Assets/Robotic Arm/Animation/: Backward.anim  Claw.controller  Forward.anim
RexRobotRetriever/Assets/Robotic Arm/HDRI/: HDRI.mat
RexRobotRetriever/Assets/Robotic Arm/Material/: Ground.mat  RobotArmShield.mat  RobotArm_M.mat  Table_M.mat
RexRobotRetriever/Assets/Robotic Arm/Models/: ClawAnimated.fbx  Table.fbx
RexRobotRetriever/Assets/Robotic Arm/Prefab/: ClawAnimated.prefab  RaspberryPIRobotArm.prefab  Table.prefab
RexRobotRetriever/Assets/Robotic Arm/Scenes/: Demoscene.unity
RexRobotRetriever/Assets/Robotic Arm/Scripts/: Claw.cs
RexRobotRetriever/Assets/Scenes/: SampleScene.unity
RexRobotRetriever/Assets/Scripts/: MobileBaseController.cs
RexRobotRetriever/Assets/Scripts/Agents/: MobileBaseAgent.cs
RexRobotRetriever/Assets/Scripts/Publishers/: ArmPosePublisher.cs  BasePosePublisher.cs  DropboxPosePublisher.cs  GripperGoalPosePublisher.cs  RangeSensorPublisher.cs  ReleasePosePublisher.cs  TargetPosePublisher.cs  TrajectoryStatusPublisher.cs
RexRobotRetriever/Assets/Scripts/Services/: ForwardKinematicsService.cs  InverseKinematicsService.cs  StartSystemService.cs  TrajectoryPlannerService.cs
RexRobotRetriever/Assets/Scripts/Subscribers/: ArmTrajectorySubscriber.cs  CmdVelSubscriber.cs  CommandSubscriber.cs
RexRobotRetriever/Assets/SensorToolkit/: FOVCollider.cs  FOVCollider2D.cs  LOSTargets.cs  README.txt  RangeSensor.cs  RangeSensor2D.cs  RaySensor.cs  RaySensor2D.cs  SteeringRig.cs  SteeringRig2D.cs  TriggerSensor.cs  TriggerSensor2D.cs
RexRobotRetriever/Assets/SensorToolkit/Editor/: FOVCollider2DEditor.cs  FOVColliderEditor.cs  RangeSensor2DEditor.cs  RangeSensorEditor.cs  RaySensor2DEditor.cs  RaySensorEditor.cs  SteeringRig2DEditor.cs  SteeringRigEditor.cs  TagSelectorPropertyDrawer.cs  TriggerSensor2DEditor.cs  TriggerSensorEditor.cs
RexRobotRetriever/Assets/SensorToolkit/PlayMaker/: GetSteeredDirection.cs  GetSteeredDirection2D.cs  PulseSensor.cs  RaySensor2DGetRaycastHit.cs  RaySensor2DObstructed.cs  RaySensorGetRaycastHit.cs  RaySensorObstructed.cs  SensorDetectionEvent.cs  SensorGetDetected.cs  SensorGetNearest.cs  SensorGetNearestToPoint.cs  SensorGetVisibility.cs  SensorGetVisibleRaycastTargets.cs  SensorGetVisibleRaycastTargets2D.cs  SensorIsDetected.cs  SensorSetIgnoreList.cs  SensorToolkitComponentAction.cs  SetFOVCollider.cs  SetFOVCollider2D.cs  SetSteeringDestination.cs  SetSteeringDestination2D.cs  SetSteeringTargetToFace.cs  SetSteeringTargetToFace2D.cs  SetSteeringTargets.cs  SetSteeringTargets2D.cs
RexRobotRetriever/Assets/SensorToolkit/src/: BaseAreaSensor.cs  BaseVolumeSensor.cs  ObjectCache.cs  Sensor.cs  (+2 more)
RexRobotRetriever/MLAgents/config/: mobile_base.yaml  mobile_base.yaml.save
RexRobotRetriever/ProjectSettings/: DynamicsManager.asset  ProjectSettings.asset  TagManager.asset
docker/: Dockerfile  entrypoint  set-up-workspace
(+254 files in other folders)
